﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

------------------------------------------------------------------------------------------------------------------------
1.2.7
------------------------------------------------------------------------------------------------------------------------

2015-06-19: Laurent Declercq
	RELEASE i-MSCP 1.2.7

BACKEND
	Fixed: BASE_SERVER_VHOST placeholder is not replaced in vhost files (httpd server implementations)
	Fixed: Unable to delete domain alias - Can't locate object method _getSharedMountPoints via package Modules::Alias
	Fixed: Unable to delete subdomain - Can't locate object method _getSharedMountPoints via package Modules::Subdomain

------------------------------------------------------------------------------------------------------------------------
1.2.6
------------------------------------------------------------------------------------------------------------------------

2015-06-18: Laurent Declercq
	RELEASE i-MSCP 1.2.6

BACKEND
	Changed: Primary phptmp directory is now used by all PHP sites
	Fixed: Wrong TMPDIR set in fcgi starter script for domains which use mount point of another domain
	Fixed: Wrong TMPDIR set in pool configuration files for domains which use mount point of another domain
	Fixed: Wrong TMPDIR set in php.ini configuration files for domains which use mount point of another domain
	Removed: BASE_SERVER_VHOST BASE_SERVER_VHOST_PREFIX and WWW_DIR data - Modules::Alias::_getHttpdData()
	Removed: BASE_SERVER_VHOST BASE_SERVER_VHOST_PREFIX and WWW_DIR data - Modules::Domain::_getHttpdData()
	Removed: BASE_SERVER_VHOST BASE_SERVER_VHOST_PREFIX and WWW_DIR data - Modules::SubAlias::_getHttpdData()