@@ -4,6 +4,8 @@
 Git 1.2.x
 ------------------------------------------------------------------------------------------------------------------------
 
+	Fixed: Unable to disable domain name (Apache2 FCGID server implementation)
+
 ------------------------------------------------------------------------------------------------------------------------
 1.2.7
 ------------------------------------------------------------------------------------------------------------------------
